# ShadowGate

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: android-ci.yml  rust-ci.yml  tauri-ci.yml
android-app/: build.gradle  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/shadowgate/rootdaemon/: RootDaemonService.kt
android-app/app/src/main/kotlin/com/shadowgate/app/: ShadowGateApp.kt
android-app/app/src/main/kotlin/com/shadowgate/app/config/: ShadowGateConfig.kt
android-app/app/src/main/kotlin/com/shadowgate/app/crypto/: NativeCrypto.kt
android-app/app/src/main/kotlin/com/shadowgate/app/service/: ShadowGateService.kt
android-app/app/src/main/kotlin/com/shadowgate/app/ui/: MainActivity.kt
android-app/app/src/main/res/values/: strings.xml  styles.xml
android-app/rootdaemon/src/main/java/com/shadowgate/rootdaemon/: RootShell.kt
android-app/xposed/src/main/: AndroidManifest.xml
android-app/xposed/src/main/java/com/shadowgate/xposed/: ShadowGateXposedModule.kt
config/: default.toml
core-lib/: Cargo.toml
core-lib/include/: shadowgate_core.h
core-lib/src/: config.rs  crypto.rs  error.rs  ffi.rs  lib.rs  protocol.rs  rssi_filter.rs
credential-provider/: README.md  ShadowGateCredentialProvider.cpp  ShadowGateCredentialProvider.vcxproj  register.ps1  unregister.ps1
pc-daemon/: Cargo.toml
pc-daemon/src/: ble_scanner.rs  challenge.rs  device_store.rs  ipc.rs  lock_actions.rs  main.rs  power_monitor.rs  state_machine.rs
tauri-ui/: package-lock.json  package.json
tauri-ui/src/: index.html  main.js  styles.css
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: main.rs
