[workspace]
resolver = "2"
members = [
    "core-lib",
    "pc-daemon",
]

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BLE (Windows)
btleplug = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }

# Windows API
windows = { version = "0.58", features = [
    "Win32_System_Power",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security_Credentials",
    "Win32_Foundation",
    "Win32_System_Registry",
] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
toml = "0.8"

# FFI
jni = "0.21"

# Encoding
base64 = "0.22"
hex = "0.4"

[profile.release]
opt-level = "s"   # Optimize for size (important for Android .so)
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
