[package]
name = "shadowgate-core"
version = "0.1.0"
edition = "2021"
description = "ShadowGate BLE proximity lock/unlock core library - platform-independent logic"

[lib]
name = "shadowgate_core"
# Build as both Rust lib and C dynamic library for Android JNI
crate-type = ["lib", "cdylib"]

[dependencies]
ed25519-dalek.workspace = true
rand.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
log.workspace = true
thiserror.workspace = true
toml.workspace = true
jni.workspace = true
base64.workspace = true
serde_bytes.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
