[package]
name = "shadowgate-pc-daemon"
version = "0.1.0"
edition = "2021"
description = "ShadowGate Windows PC Daemon - BLE scanning, authentication, and lock/unlock"

[[bin]]
name = "shadowgate-daemon"
path = "src/main.rs"

[dependencies]
shadowgate-core = { path = "../core-lib" }
btleplug.workspace = true
tokio.workspace = true
windows.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
uuid.workspace = true
futures = "0.3"
