[package]
name = "shadowgate-ui"
version = "0.1.0"
edition = "2021"
description = "ShadowGate Tauri Configuration UI"

# Tauri is NOT part of the parent workspace
[workspace]

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
